# WebServer-C-Playground

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE
.github/workflows/: build.yml  cicd.yml  learn-github-actions.yml
core/: CMakeLists.txt  configuration.h
core/include/: internalConfiguration.h
core/src/: main.c
google_test/: CMakeLists.txt  http-test.cpp  test1.cpp
html/: README.md  index.html
libs/: CMakeLists.txt
libs/Http/: CMakeLists.txt  http.h
libs/Http/include/: http-requestmethod.h  http-response.h
libs/Http/src/: http-requestmethod.c  http.c
libs/Logger/: CMakeLists.txt  logger.h
libs/Logger/src/: logger.c
libs/Server/: CMakeLists.txt  server.h
libs/Server/include/: server_configuration.h  server_defaults.h  server_errors.h  server_options.h
libs/Server/src/: server.c
libs/Socket/: CMakeLists.txt  socket.h
libs/Socket/include/: socket-unix.h  socket_errors.h
libs/Socket/src/: socket.c  socket_unix.c  socket_win32.c
libs/tcp/: tcp.h
libs/tcp/src/: tcp.c
